<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcee73"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="158dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bojio_logov3" />


    <TextView
        android:id="@+id/titletxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/register"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/input_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titletxt">

        <EditText
            android:id="@+id/reusername"
            android:layout_width="@dimen/logintxt"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_middle"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="15dp" />

        <EditText
            android:id="@+id/reemailtxt"
            android:layout_width="@dimen/logintxt"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_middle"
            android:hint="@string/emailtxt"
            android:inputType="textEmailAddress"
            android:padding="15dp" />

        <EditText
            android:id="@+id/lopasstxt"
            android:layout_width="@dimen/logintxt"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_middle"
            android:hint="@string/passtxt"
            android:inputType="textPassword"
            android:padding="15dp" />

        <EditText
            android:id="@+id/confirmpasstxt"
            android:layout_width="@dimen/logintxt"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_middle"
            android:hint="@string/confirmpass"
            android:inputType="textPassword"
            android:padding="15dp" />


        <Button
            android:id="@+id/signUpbtn"
            android:layout_width="@dimen/logintxt"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/signUpbtn"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/signIn_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:text="Already Have an Account?  Sign in"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="13dp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>